<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farhan.pizzatask.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pizza"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/bntAdd"
            style="@style/myButtonForMainActivity"
            android:text="@string/addStdData" />


        <Button
            android:id="@+id/btnView"
            style="@style/myButtonForMainActivity"
            android:text="@string/searchStdData" />

        <Button
            android:id="@+id/btnViewAll"
            style="@style/myButtonForMainActivity"
            android:text="@string/viewAllData" />
</LinearLayout>
</ScrollView>